<resources>
    <string name="announcement___new_version_detail">"This release adds a new tutorial section, makes OctoApp ready for Android 12 including support for the new Material You design and improves the notifications"</string>
    <string name="announcement___new_version_learn_more">"What's new?"</string>
    <string name="announcement___new_version_title">"Welcome to Protosthetics Printer Control 1.0! 🍾"</string>
    <string name="app_logs">"App logs"</string>
    <string name="app_name">"Protosthetics Printer Control"</string>
    <string name="app_widget___controlling_x">"Controlling %s"</string>
    <string name="app_widget___edit_items_in_app">"Edit items in the app by long-pressing them"</string>
    <string name="app_widget___free_widgets_exceeded_action">"Ok"</string>
    <string name="app_widget___free_widgets_exceeded_message">"You can only have %d widgets without supporting OctoApp. You can support OctoApp from the app's main menu."</string>
    <string name="app_widget___idle">"%s ready"</string>
    <string name="app_widget___information_always_synced">"This widget is still in BETA. Some menu items might not behave correctly, please report a bug if you find something!

The widget will always control the OctoPrint instance that is currently active in the app"</string>
    <string name="app_widget___information_title">"Information"</string>
    <string name="app_widget___link_widget__option_synced">"Sync with app"</string>
    <string name="app_widget___link_widget__option_x">"Always „%s“"</string>
    <string name="app_widget___link_widget_title" translatable="false">"Which OctoPrint should this widget use?"</string>
    <string name="app_widget___live">"Live"</string>
    <string name="app_widget___live_for_x">"Live for %ds"</string>
    <string name="app_widget___no_data">"No data"</string>
    <string name="app_widget___no_image">"No image"</string>
    <string name="app_widget___no_printer">"No printer connected"</string>
    <string name="app_widget___offline_since_x">"Offline since %s"</string>
    <string name="app_widget___update_failed">"Update failed"</string>
    <string name="app_widget___updating">"Updating…"</string>
    <string name="tune_print___apply">"Apply"</string>
    <string name="billing_unsupported_detail">"Only apps downlaoded from Google Play can activate features. Please reach out to hello@octoapp.eu!"</string>
    <string name="billing_unsupported_title">"Only supported for apps from Google Play"</string>
    <string name="cancel">"Cancel"</string>
    <string name="cancel_print">"Cancel Print"</string>
    <string name="cancel_print_confirmation_action">"Cancel print"</string>
    <string name="cancel_print_confirmation_message">"Do you want to cancel the print?"</string>
    <string name="cancelling">"Cancelling…"</string>
    <string name="capabilities_validation_error">"Couldn't verify your servers capabilities. Some features of the app might not work as expected."</string>
    <string name="change_filament">"Change Filament"</string>
    <string name="change_filament_confirmation_action">"Change filament"</string>
    <string name="change_filament_confirmation_message">"Do you want to change the filament?"</string>
    <string name="clear_lebel">"Clear label"</string>
    <string name="command">"Command"</string>
    <string name="file_manager___file_details___completed">"Completed"</string>
    <string name="configure_remote_acces___description"><![CDATA[Not at home? On it’s own, OctoApp can’t reach your OctoPrint as it is only available in your home network. You need to make OctoPrint available over the internet so that OctoApp can access it from wherever you are. Learn more <a href="https://app.octoapp.eu/help/faq/use_remotely">here</a>.]]></string>
    <string name="configure_remote_acces___ignore_issue">"Ignore and continue"</string>
    <string name="configure_remote_acces___manual___button">"Save remote URL"</string>
    <string name="configure_remote_acces___manual___description">"You are an IT expert and want to set up remote access on your own? Enter the public web URL below. Whenever the primary web URL you signed in with is not reachable, OctoApp will fallback to this URL until your are back home."</string>
    <string name="configure_remote_acces___manual___title">"Manual setup"</string>
    <string name="configure_remote_acces___octoeverywhere___connect_button">"Connect OctoEverywhere!"</string>
    <string name="configure_remote_acces___octoeverywhere___connected">"OctoEverywhere is connected!"</string>
    <string name="configure_remote_acces___octoeverywhere___description_1">"OctoEverywhere is a plugin for OctoPrint which makes remote access for OctoApp very easy. Simply install the plugin, create an account and log in below."</string>
    <string name="configure_remote_acces___octoeverywhere___description_2">"Using a 3rd party app like OctoApp currently requires a paid subscription with OctoEverywhere to cover the server costs."</string>
    <string name="configure_remote_acces___octoeverywhere___disconnect_button">"Disconnect OctoEverywhere!"</string>
    <string name="configure_remote_acces___octoeverywhere___error_install_plugin"><![CDATA[
    Please <b>open the webinterface</b> and install the latest version of the <b>OctoEverywhere plugin</b> before continuing.
    ]]></string>
    <string name="configure_remote_acces___octoeverywhere___title">"OctoEverywhere!"</string>
    <string name="configure_remote_acces___remote_access_configured">"Remote access configured"</string>
    <string name="configure_remote_access___title">"Configure Remote Access"</string>
    <string name="workspace___connect">"Connect"</string>
    <string name="connect_printer___action_change_octoprint">"Switch OctoPrint"</string>
    <string name="connect_printer___action_cycle_psu">"Cycle PSU"</string>
    <string name="connect_printer___action_retry">"Retry connection"</string>
    <string name="connect_printer___action_troubleshooting">"Start troubleshooting"</string>
    <string name="connect_printer___action_turn_psu_off">"Turn off PSU"</string>
    <string name="connect_printer___action_turn_psu_on">"Turn PSU on"</string>
    <string name="connect_printer___auto_selection_failed">"Unable to auto-detect port, selecting first"</string>
    <string name="connect_printer___begin_connection">"Connect Printer"</string>
    <string name="connect_printer___begin_connection_cofirmation_negative">@string/cancel</string>
    <string name="connect_printer___begin_connection_cofirmation_positive">"Connect Printer"</string>
    <string name="connect_printer___begin_connection_confirmation_message"><![CDATA[Start connecting the printer?<br><small>This will interrupt ongoing prints from SD card!</small>]]></string>
    <string name="connect_printer___no_wifi_connection">"No WiFi connection"</string>
    <string name="connect_printer___octoprint_not_available_detail">"Check your network connection or if your OctoPrint's web address changed"</string>
    <string name="connect_printer___octoprint_not_available_title">"OctoPrint is not available"</string>
    <string name="connect_printer___octoprint_starting_title">"OctoPrint is starting up"</string>
    <string name="connect_printer___printer_connected_detail_1">"Getting ready for awesomeness…"</string>
    <string name="connect_printer___printer_connected_detail_2">"This takes longer than usual. Either your network is weak, or the websocket does not work correctly. If you are stuck here, use the help section in the main menu."</string>
    <string name="connect_printer___printer_connected_title">"Printer connected"</string>
    <string name="connect_printer___printer_is_connecting_title">"Printer is connecting"</string>
    <string name="connect_printer___printer_offline_detail">"Turn the printer off and on again to reset it"</string>
    <string name="connect_printer___printer_offline_detail_with_psu">"Cycle the PSU to reset the printer"</string>
    <string name="connect_printer___printer_offline_title">"Printer is offline"</string>
    <string name="connect_printer___psu_cycling_title">"PSU is being cycled"</string>
    <string name="connect_printer___psu_on_waiting_for_printer_title">"PSU turned on, waiting for printer to boot"</string>
    <string name="connect_printer___searching_for_octoprint_title">"Searching for Octoprint"</string>
    <string name="connect_printer___waiting_for_printer_detail">"OctoApp will auto-connect the printer once available"</string>
    <string name="connect_printer___waiting_for_printer_title">"OctoPrint connected, waiting for printer"</string>
    <string name="connect_printer___waiting_for_user_subtitle">"You can enable auto-connect in the settings"</string>
    <string name="connect_printer___waiting_for_user_title">"Connect when you are ready"</string>
    <string name="connection_failed">"Connection failed"</string>
    <string name="distance_in_mm_negative_for_retract">"Distance in mm (negative for retract)"</string>
    <string name="done">"Done"</string>
    <string name="download_x">"Download %s"</string>
    <string name="emergency_stop">"Emergency Stop"</string>
    <string name="emergency_stop_confirmation_action">"Emergency stop"</string>
    <string name="emergency_stop_confirmation_message"><![CDATA[Do you want to emergency stop the printer?<br><br><small>This triggers a M112 command with your printer. Please see this as an \"immediate cancel\" where the printer stops without working off the queue.<br><br>Important: The printer must be restarted after an emergency stop!</small>]]></string>
    <string name="empty">"Empty"</string>
    <string name="enable">"Enable"</string>
    <string name="give_feedback">"Give Feedback"</string>
    <string name="information_about_your_octoprint">"Information about your OctoPrint"</string>
    <string name="information_about_your_phone">"Information about your phone"</string>
    <string name="insert">"Insert"</string>
    <string name="message">"Message"</string>
    <string name="open_email">"Open Email"</string>
    <string name="open_octoprint">"Open OctoPrint"</string>
    <string name="open_terminal">"Open Terminal"</string>
    <string name="remove_shortcut">"Remove shortcut"</string>
    <string name="screenshot_of_current_screen">"Screenshot of current screen"</string>
    <string name="send_feedback">"Send Feedback"</string>
    <string name="set_lebel">"Set label"</string>
    <string name="shortcut_tutorial_line1">"Long-press shortcuts to get more options"</string>
    <string name="shortcut_tutorial_line2">"Shortcuts are automatically added when you send commands in terminal"</string>
    <string name="sign_in___discover___web_url_hint">"OctoPrint URL"</string>
    <string name="sign_in___discover___web_url_hint_active">"OctoPrint URL – Copy this from your browser!"</string>
    <string name="support_octoapp">"Support OctoApp"</string>
    <string name="thank_you_for_sending_feedback_please_select_what_should_be_included_in_your_message">"Thank you for sending feedback. Please enter a message and select what should be attached."</string>
    <string name="toggle_favorite">"Toggle pinned"</string>
    <string name="widget_quick_access___tutorial_detail">"You can long-press any menu item to pin it to Quick Access locations, to the main menu or a home screen widget."</string>
    <string name="widget_quick_access___tutorial_learn_more">"Watch the tutorial"</string>
    <string name="widget_quick_access___tutorial_title">"Make OctoApp yours!"</string>
    <string name="configure_remote_access___manual___username_hint">"BasicAuth user, optional"</string>
    <string name="configure_remote_access___manual___username_hint_active">"Username, optional"</string>
    <string name="configure_remote_access___manual___password_hint">"BasicAuth password, optional"</string>
    <string name="configure_remote_access___manual___password_hint_active">"Password, optional"</string>
</resources>