<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuOpenOctoprint"
        android:title="@string/open_octoprint"
        android:icon="@drawable/ic_round_open_in_browser_24"/>

    <item
        android:id="@+id/menuChangeFilament"
        android:title="@string/change_filament"
        android:icon="@drawable/ic_round_change_history_24"/>

    <item
        android:id="@+id/menuEmergencyStop"
        android:title="@string/emergency_stop"
        android:icon="@drawable/ic_round_cancel_24"/>

    <item
        android:id="@+id/menuCancelPrint"
        android:title="@string/cancel_print"
        android:icon="@drawable/ic_round_remove_circle_24"/>

</menu>