<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@id/menuSupportOctoApp"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/support_octoapp" />

    <item
        android:id="@id/menuGiveFeedback"
        android:icon="@drawable/ic_round_feedback_24"
        android:title="@string/give_feedback" />

    <item
        android:id="@+id/menuChangeLanguage"
        android:icon="@drawable/ic_round_language_24"
        android:title="" />

    <item
        android:id="@id/menuOpenOctoprint"
        android:icon="@drawable/ic_round_open_in_browser_24"
        android:title="@string/open_octoprint" />

    <item
        android:id="@+id/menuItemTurnOffPsu"
        android:icon="@drawable/ic_round_power_settings_new_24"
        android:title="@string/turn_off_psu" />

</menu>