<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <de.crysxd.octoapp.base.ui.common.TutorialView
        android:id="@+id/tutorialStub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_2"
        app:detail="@string/shortcut_tutorial_line2"
        app:hidePrefName="gcode_shortcut_tutorial_hidden"
        app:title="@string/shortcut_tutorial_line1" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/gcodeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="flex_start"
        app:alignItems="flex_start"
        app:dividerDrawable="@drawable/flow_divider"
        app:flexWrap="wrap"
        app:showDivider="middle">

        <Button
            android:id="@+id/buttonOpenTerminal"
            style="@style/OctoTheme.Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_terminal" />

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>
